p2/confs/app1-myportfolio.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
      - name: portfolio
        image: its0me/myportfolio:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service    
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 3000
